--- a/public/my-assets/scss/styles.scss
+++ b/public/my-assets/scss/styles.scss
@@ -2,6 +2,9 @@
 @import 'mixin';
 @import 'fonts';
 @import 'variables';
+@import 'base';
 @import 'content';
+@import 'button';
 @import 'header';
+@import 'layout/top-cart';
 @import 'footer';
