--- a/public/my-assets/scss/variables.scss
+++ b/public/my-assets/scss/variables.scss
@@ -1,29 +1,23 @@
 // Color:
-
 $brand-color: #3bc0c3;
 $black-color: #000000;
 $blue-text-color: #314350;
-$red-color: #f05050;
+$active-color: #f05050;
 $footer-bg: #b6c2c9;
-
 $border-grey-color:#0f1922;
 $a-hover-color: #83aacb;
-$light-grey-bg: #f8f8f8;
-$dark-grey-bg: #edeeee;
-$slider-bg: #cfd0d1;
-$grey-text-color: #939393;
+$nav-hover-dark-color: #1d2b36;
+$nav-children-bg-color: #edf1f2;
 
+// path
+$assets: '../../my-assets';
 
-// Sizes
-
-$default-width: 1024px;
-
-// Border-radius
-
-$default-border-radius: 6px;
-
+// font
+$open-sans: 'Open Sans', sans-serif;
 
 // Predefined Break-points
-$desktop-width: 1024px;
-$tablet-width: 1023px;
-$mobile-width: 627px;
+$default-width: 940px;
+$mobile-width: 320px;
+
+// Border-radius
+$default-border-radius: 3px;
