--- a/public/my-assets/scss/content.scss
+++ b/public/my-assets/scss/content.scss
@@ -9,9 +9,130 @@
   }
 
   section {
-    padding: 20px 0;
+    padding: 15px 0;
     position: relative;
     float: left;
     width: 100%;
+    overflow: hidden;
+    &.home-block {
+      padding-top: 20px;
+      .static-block {
+        width: 49%;
+        float: left;
+        position: relative;
+        height: 180px;
+        background-size: cover;
+        background-position: 50%;
+        .banner-title {
+          position: absolute;
+          top: 62px;
+          text-align: center;
+          width: 100%;
+          background:	url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAHklEQVQ4T2M0MjKayUABYBw1gGE0DBhGw4BhWIQBAM7oEwEIraZpAAAAAElFTkSuQmCC);
+          background:	rgba(51, 51, 51, 0.6);
+          color: #fff;
+          text-transform: uppercase;
+          font-weight: 700;
+          padding: 10px 0;
+          h3 {
+            font-size: 24px;
+            line-height: 1.3;
+          }
+          h4 {
+            font-size: 12px;
+          }
+        }
+      }
+      article {
+        width: 49%;
+        float: right;
+        color: #333333;
+        font-weight: 700;
+        margin-left: 1%;
+        h1 {
+          font-size: 42px;
+          line-height: 1.3;
+          padding-bottom: 5px;
+          margin-top: -15px;
+        }
+        h2 {
+          text-transform: uppercase;
+          font-size: 24px;
+          width: 300px;
+          line-height: 1.3;
+          padding-bottom: 5px;
+        }
+        p {
+          font-size: 18px;
+
+        }
+      }
+      &.products {
+
+      }
+    }
+    .content-header {
+      width: 100%;
+      text-align: left;
+      position: relative;
+      padding-left: 30px;
+      &:before {
+        content: " ";
+        position: absolute;
+        width: 100%;
+        border-top: 2px solid $blue-text-color;
+        height: 3px;
+        left: 0;
+        top: 9px;
+        z-index: 1;
+      }
+      span.title {
+        font: 24px/0.7 $open-sans;
+        color: $blue-text-color;
+        background-color: #fff;
+        z-index: 2;
+        position: relative;
+        vertical-align: baseline;
+        text-transform: uppercase;
+        padding: 0 10px;
+      }
+    }
   }
+
+  ol.products-list {
+    margin-right: -19px;
+    li {
+      text-align: center;
+      padding-bottom: 20px;
+      float: left;
+      &.col-4 {
+        width: 23%;
+        margin-right: 2%;
+      }
+      .item-container {
+        position: relative;
+        border: 1px solid #b6c2c9;
+        max-width: 262px;
+        padding: 20px 10px 25px 10px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        a.product-image img {
+          display: block;
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+  }
+}
+
+// other
+
+.alert {
+  float: left;
+  width: 100%;
+  text-align: center;
+  padding: 20px 0;
+  color: $active-color;
 }
