--- a/public/my-assets/scss/styles.scss
+++ b/public/my-assets/scss/styles.scss
@@ -3,8 +3,9 @@
 @import 'fonts';
 @import 'variables';
 @import 'base';
+@import 'header';
 @import 'content';
 @import 'button';
-@import 'header';
+@import 'form';
 @import 'layout/top-cart';
 @import 'footer';
