--- a/public/my-assets/scss/base.scss
+++ b/public/my-assets/scss/base.scss
@@ -2,6 +2,28 @@ html {
   background-color: #fff;
   height: 100%;
   box-sizing: border-box;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+p {
+  line-height: 1.3;
+}
+
+h1, h2 {
+  line-height: 1.5;
+}
+
+h1 {
+  font: 42px/1.3 "Open Sans", sans-serif;
+}
+
+h2 {
+  font: 24px/1.3 "Open Sans", sans-serif;
+}
+
+h3 {
+  font: 18px/1.3 "Open Sans", sans-serif;
 }
 
 *,
@@ -17,4 +39,10 @@ body {
   margin: 0;
   min-height: 100%;
   border-top: 20px solid $brand-color;
+}
+
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
