--- a/public/my-assets/scss/form.scss
+++ b/public/my-assets/scss/form.scss
@@ -1,3 +1,36 @@
-form {
+form#subscribe {
+  position: relative;
+  input[type="text"] {
+    border: 1px solid #e6e6e6;
+    clear: both;
+    color: #88837a;
+    font: 13px/17px $open-sans;
+    display: inline-block;
+    height: 30px;
+    width: 68%;
+    padding: 10px 10px 12px 32px;
+    margin: 20px 0;
+    border-radius: 3px;
+    &:focus {outline:none;}
+  }
+  button {
+    position: relative;
+    height: 30px;
+  }
 
+  &:after {
+    content: "";
+    width: 30px;
+    height: 30px;
+    background-image:  url(#{$assets}/images/mail.png);
+    background-repeat: no-repeat;
+    color: #8f8e8e;
+    font-size: 18px;
+    line-height: 46px;
+    text-align: center;
+    border-radius: 0 4px 4px 0;
+    position: absolute;
+    top: 26px;
+    left: 14px;
+  }
 }
