--- a/public/my-assets/stylesheets/layout/top-cart.css
+++ b/public/my-assets/stylesheets/layout/top-cart.css
@@ -1,24 +1,39 @@
 /*
-Error: Undefined variable: "$footer-bg".
-        on line 6 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/footer.scss
+Error: Undefined variable: "$open-sans".
+        on line 15 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss
 
-1: footer {
-2:   position: relative;
-3:   padding: 1rem;
-4:   float: left;
-5:   width: 100%;
-6:   background-color: $footer-bg;
-7:   padding-bottom: 40px;
-8:   text-align: center;
-9:   .container  {
-10:     position: relative;
-11:     .col-4, .col-3 {
+10:   border: 1px solid #b6c2c9;
+11:   top: 36px;
+12:   text-align: center;
+13:  a {
+14:    text-decoration: none;
+15:    font: 12px/36px $open-sans;
+16:    font-weight: 400;
+17:    color: $blue-text-color;
+18:    strong {
+19:      font-weight: 700;
+20:      padding-left: 2px;
 
 Backtrace:
-C:/MAMP/htdocs/vaimo/public/my-assets/scss/footer.scss:6
+C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss:15
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/variable.rb:49:in `_perform'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/list_literal.rb:63:in `map'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/list_literal.rb:63:in `_perform'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:395:in `visit_prop'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:115:in `with_frame'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:79:in `with_base'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `visit'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block (2 levels) in visit_rule'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `map'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block in visit_rule'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:429:in `visit_rule'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
@@ -66,4 +81,4 @@ C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/vendor/listen/lib/listen/adap
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$footer-bg\".\A         on line 6 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/footer.scss\A \A 1: footer {\A 2:   position: relative;\A 3:   padding: 1rem;\A 4:   float: left;\A 5:   width: 100%;\A 6:   background-color: $footer-bg;\A 7:   padding-bottom: 40px;\A 8:   text-align: center;\A 9:   .container  {\A 10:     position: relative;\A 11:     .col-4, .col-3 {"; }
+  content: "Error: Undefined variable: \"$open-sans\".\A         on line 15 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss\A \A 10:   border: 1px solid #b6c2c9;\A 11:   top: 36px;\A 12:   text-align: center;\A 13:  a {\A 14:    text-decoration: none;\A 15:    font: 12px/36px $open-sans;\A 16:    font-weight: 400;\A 17:    color: $blue-text-color;\A 18:    strong {\A 19:      font-weight: 700;\A 20:      padding-left: 2px;"; }
