--- a/public/my-assets/stylesheets/styles.css
+++ b/public/my-assets/stylesheets/styles.css
@@ -58,16 +58,43 @@ html {
   background-color: #fff;
   height: 100%;
   box-sizing: border-box;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
 }
 
-/* line 7, ../scss/base.scss */
+/* line 9, ../scss/base.scss */
+p {
+  line-height: 1.3;
+}
+
+/* line 13, ../scss/base.scss */
+h1, h2 {
+  line-height: 1.5;
+}
+
+/* line 17, ../scss/base.scss */
+h1 {
+  font: 42px/1.3 "Open Sans", sans-serif;
+}
+
+/* line 21, ../scss/base.scss */
+h2 {
+  font: 24px/1.3 "Open Sans", sans-serif;
+}
+
+/* line 25, ../scss/base.scss */
+h3 {
+  font: 18px/1.3 "Open Sans", sans-serif;
+}
+
+/* line 29, ../scss/base.scss */
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-/* line 13, ../scss/base.scss */
+/* line 35, ../scss/base.scss */
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
@@ -77,52 +104,11 @@ body {
   border-top: 20px solid #3bc0c3;
 }
 
-/* line 1, ../scss/content.scss */
-.container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  max-width: 940px;
-  margin: 0 auto;
-}
-/* line 7, ../scss/content.scss */
-.container.content {
-  padding: 20px 0;
-}
-/* line 11, ../scss/content.scss */
-.container section {
-  padding: 20px 0;
-  position: relative;
-  float: left;
-  width: 100%;
-}
-
-/* line 1, ../scss/button.scss */
-.button {
-  font-size: 12px;
-  font-weight: 700;
-  text-decoration: none;
-  background: #3bc0c3;
-  border: 1px solid #3bc0c3;
-  color: #fff;
-  display: inline-block;
-  padding: 6px 15px;
-  margin-bottom: 0;
-  text-align: center;
-  text-transform: uppercase;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  white-space: nowrap;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
+/* line 44, ../scss/base.scss */
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* line 1, ../scss/header.scss */
@@ -296,6 +282,229 @@ header .navigation nav + nav {
   right: 0;
 }
 
+/* line 1, ../scss/content.scss */
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-width: 940px;
+  margin: 0 auto;
+}
+/* line 7, ../scss/content.scss */
+.container.content {
+  padding: 20px 0;
+}
+/* line 11, ../scss/content.scss */
+.container section {
+  padding: 15px 0;
+  position: relative;
+  float: left;
+  width: 100%;
+  overflow: hidden;
+}
+/* line 17, ../scss/content.scss */
+.container section.home-block {
+  padding-top: 20px;
+}
+/* line 19, ../scss/content.scss */
+.container section.home-block .static-block {
+  width: 49%;
+  float: left;
+  position: relative;
+  height: 180px;
+  background-size: cover;
+  background-position: 50%;
+}
+/* line 26, ../scss/content.scss */
+.container section.home-block .static-block .banner-title {
+  position: absolute;
+  top: 62px;
+  text-align: center;
+  width: 100%;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAHklEQVQ4T2M0MjKayUABYBw1gGE0DBhGw4BhWIQBAM7oEwEIraZpAAAAAElFTkSuQmCC);
+  background: rgba(51, 51, 51, 0.6);
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 10px 0;
+}
+/* line 37, ../scss/content.scss */
+.container section.home-block .static-block .banner-title h3 {
+  font-size: 24px;
+  line-height: 1.3;
+}
+/* line 41, ../scss/content.scss */
+.container section.home-block .static-block .banner-title h4 {
+  font-size: 12px;
+}
+/* line 46, ../scss/content.scss */
+.container section.home-block article {
+  width: 49%;
+  float: right;
+  color: #333333;
+  font-weight: 700;
+  margin-left: 1%;
+}
+/* line 52, ../scss/content.scss */
+.container section.home-block article h1 {
+  font-size: 42px;
+  line-height: 1.3;
+  padding-bottom: 5px;
+  margin-top: -15px;
+}
+/* line 58, ../scss/content.scss */
+.container section.home-block article h2 {
+  text-transform: uppercase;
+  font-size: 24px;
+  width: 300px;
+  line-height: 1.3;
+  padding-bottom: 5px;
+}
+/* line 65, ../scss/content.scss */
+.container section.home-block article p {
+  font-size: 18px;
+}
+/* line 74, ../scss/content.scss */
+.container section .content-header {
+  width: 100%;
+  text-align: left;
+  position: relative;
+  padding-left: 30px;
+}
+/* line 79, ../scss/content.scss */
+.container section .content-header:before {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  border-top: 2px solid #314350;
+  height: 3px;
+  left: 0;
+  top: 9px;
+  z-index: 1;
+}
+/* line 89, ../scss/content.scss */
+.container section .content-header span.title {
+  font: 24px/0.7 "Open Sans", sans-serif;
+  color: #314350;
+  background-color: #fff;
+  z-index: 2;
+  position: relative;
+  vertical-align: baseline;
+  text-transform: uppercase;
+  padding: 0 10px;
+}
+/* line 102, ../scss/content.scss */
+.container ol.products-list {
+  margin-right: -19px;
+}
+/* line 104, ../scss/content.scss */
+.container ol.products-list li {
+  text-align: center;
+  padding-bottom: 20px;
+  float: left;
+}
+/* line 108, ../scss/content.scss */
+.container ol.products-list li.col-4 {
+  width: 23%;
+  margin-right: 2%;
+}
+/* line 112, ../scss/content.scss */
+.container ol.products-list li .item-container {
+  position: relative;
+  border: 1px solid #b6c2c9;
+  max-width: 262px;
+  padding: 20px 10px 25px 10px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+/* line 120, ../scss/content.scss */
+.container ol.products-list li .item-container a.product-image img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+/* line 132, ../scss/content.scss */
+.alert {
+  float: left;
+  width: 100%;
+  text-align: center;
+  padding: 20px 0;
+  color: #f05050;
+}
+
+/* line 1, ../scss/button.scss */
+.button {
+  font-size: 12px;
+  font-weight: 700;
+  text-decoration: none;
+  background: #3bc0c3;
+  border: 1px solid #3bc0c3;
+  color: #fff;
+  display: inline-block;
+  padding: 6px 15px;
+  margin-bottom: 0;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+/* line 1, ../scss/form.scss */
+form#subscribe {
+  position: relative;
+}
+/* line 3, ../scss/form.scss */
+form#subscribe input[type="text"] {
+  border: 1px solid #e6e6e6;
+  clear: both;
+  color: #88837a;
+  font: 13px/17px "Open Sans", sans-serif;
+  display: inline-block;
+  height: 30px;
+  width: 68%;
+  padding: 10px 10px 12px 32px;
+  margin: 20px 0;
+  border-radius: 3px;
+}
+/* line 14, ../scss/form.scss */
+form#subscribe input[type="text"]:focus {
+  outline: none;
+}
+/* line 16, ../scss/form.scss */
+form#subscribe button {
+  position: relative;
+  height: 30px;
+}
+/* line 21, ../scss/form.scss */
+form#subscribe:after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background-image: url(../../my-assets/images/mail.png);
+  background-repeat: no-repeat;
+  color: #8f8e8e;
+  font-size: 18px;
+  line-height: 46px;
+  text-align: center;
+  border-radius: 0 4px 4px 0;
+  position: absolute;
+  top: 26px;
+  left: 14px;
+}
+
 /* line 2, ../scss/layout/top-cart.scss */
 .header-top-cart {
   width: auto;
@@ -325,7 +534,7 @@ header .navigation nav + nav {
 .header-top-cart a img {
   vertical-align: sub;
   margin-right: 7px;
-  top: 3px;
+  top: 1px;
   position: relative;
 }
 /* line 29, ../scss/layout/top-cart.scss */
@@ -335,44 +544,47 @@ header .navigation nav + nav {
 
 /* line 1, ../scss/footer.scss */
 footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  position: relative;
   padding: 1rem;
+  float: left;
+  width: 100%;
   background-color: #b6c2c9;
   padding-bottom: 40px;
   text-align: center;
 }
-/* line 10, ../scss/footer.scss */
+/* line 9, ../scss/footer.scss */
 footer .container {
   position: relative;
 }
-/* line 12, ../scss/footer.scss */
-footer .container .col-3 {
-  width: 33%;
+/* line 11, ../scss/footer.scss */
+footer .container .col-4, footer .container .col-3 {
+  width: 30%;
   float: left;
 }
-/* line 15, ../scss/footer.scss */
-footer .container .col-3 h3 {
+/* line 14, ../scss/footer.scss */
+footer .container .col-4 h3, footer .container .col-3 h3 {
   text-transform: uppercase;
   color: #fff;
   text-align: left;
   font: 18px/1.3 "Open Sans", sans-serif;
   font-weight: 700;
 }
-/* line 22, ../scss/footer.scss */
-footer .container .col-3 ul {
+/* line 21, ../scss/footer.scss */
+footer .container .col-4 ul, footer .container .col-3 ul {
   padding-top: 20px;
 }
-/* line 24, ../scss/footer.scss */
-footer .container .col-3 ul li {
+/* line 23, ../scss/footer.scss */
+footer .container .col-4 ul li, footer .container .col-3 ul li {
   text-align: left;
 }
-/* line 26, ../scss/footer.scss */
-footer .container .col-3 ul li a {
+/* line 25, ../scss/footer.scss */
+footer .container .col-4 ul li a, footer .container .col-3 ul li a {
   text-decoration: none;
   font: 14px/2 "Open Sans", sans-serif;
   text-transform: uppercase;
   color: #fff;
+}
+/* line 33, ../scss/footer.scss */
+footer .container .col-4.col-3, footer .container .col-3.col-3 {
+  width: 40%;
 }
