--- a/public/my-assets/scss/button.scss
+++ b/public/my-assets/scss/button.scss
@@ -23,4 +23,7 @@
   user-select: none;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
+  &:hover, &:focus {
+    background-color: #309ea1;
+  }
 }
