--- a/public/my-assets/scss/form.scss
+++ b/public/my-assets/scss/form.scss
@@ -1,4 +1,4 @@
-form#subscribe {
+form {
   position: relative;
   input[type="text"] {
     display: block;
@@ -26,7 +26,7 @@ form#subscribe {
     content: "";
     width: 30px;
     height: 30px;
-    background-image:  url(#{$assets}/images/mail.png);
+    background-image:  url(#{$assets}/images/mail.png) ;
     background-repeat: no-repeat;
     color: #8f8e8e;
     font-size: 18px;
@@ -40,5 +40,51 @@ form#subscribe {
 
   input {
     line-height: normal !important;
+  }
+}
+
+.ajax-process {
+  display: none;
+  position: absolute;
+  font-size: 12px;
+  color: #fff;
+  font-style: italic;
+  left: 20px;
+  top: 60px;
+  &:before {
+    content: '';
+    background-image: url(../../my-assets/images/ajax_loader.gif);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: -20px;
+    top: -3px;
+  }
+  &.success {
+    color: #3c8039;
+    &:before {
+      content: '';
+      background-image: url(../../my-assets/images/accept.png);
+      background-repeat: no-repeat;
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      left: -20px;
+      top: -3px;
+    }
+  }
+  &.error {
+    color: $active-color;
+    &:before {
+      content: '';
+      background-image: url(../../my-assets/images/error.png);
+      background-repeat: no-repeat;
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      left: -20px;
+      top: -3px;
+    }
   }
 }
