--- a/public/my-assets/stylesheets/styles.css
+++ b/public/my-assets/stylesheets/styles.css
@@ -433,14 +433,15 @@ header .navigation nav + nav {
 /* line 26, ../scss/button.scss */
 .button:hover, .button:focus {
   background-color: #309ea1;
+  outline: none;
 }
 
 /* line 1, ../scss/form.scss */
-form#subscribe {
+form {
   position: relative;
 }
 /* line 3, ../scss/form.scss */
-form#subscribe input[type="text"] {
+form input[type="text"] {
   display: block;
   box-sizing: border-box;
   line-height: 1.0;
@@ -455,18 +456,18 @@ form#subscribe input[type="text"] {
   padding-left: 35px;
 }
 /* line 16, ../scss/form.scss */
-form#subscribe input[type="text"]:focus {
+form input[type="text"]:focus {
   outline: none;
 }
 /* line 18, ../scss/form.scss */
-form#subscribe input[type="submit"] {
+form input[type="submit"] {
   position: absolute;
   height: 30px;
   top: 20px;
   left: 240px;
 }
 /* line 25, ../scss/form.scss */
-form#subscribe:after {
+form:after {
   content: "";
   width: 30px;
   height: 30px;
@@ -482,8 +483,60 @@ form#subscribe:after {
   background-position: 3px 4px;
 }
 /* line 41, ../scss/form.scss */
-form#subscribe input {
+form input {
   line-height: normal !important;
+}
+
+/* line 46, ../scss/form.scss */
+.ajax-process {
+  display: none;
+  position: absolute;
+  font-size: 12px;
+  color: #fff;
+  font-style: italic;
+  left: 20px;
+  top: 60px;
+}
+/* line 54, ../scss/form.scss */
+.ajax-process:before {
+  content: '';
+  background-image: url(../../my-assets/images/ajax_loader.gif);
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: -20px;
+  top: -3px;
+}
+/* line 64, ../scss/form.scss */
+.ajax-process.success {
+  color: #3c8039;
+}
+/* line 66, ../scss/form.scss */
+.ajax-process.success:before {
+  content: '';
+  background-image: url(../../my-assets/images/accept.png);
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: -20px;
+  top: -3px;
+}
+/* line 77, ../scss/form.scss */
+.ajax-process.error {
+  color: #f05050;
+}
+/* line 79, ../scss/form.scss */
+.ajax-process.error:before {
+  content: '';
+  background-image: url(../../my-assets/images/error.png);
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: -20px;
+  top: -3px;
 }
 
 /* line 2, ../scss/layout/top-cart.scss */
