--- a/public/my-assets/scss/layout/top-cart.scss
+++ b/public/my-assets/scss/layout/top-cart.scss
@@ -1,6 +1,6 @@
 //   top cart
 .header-top-cart {
-  width: auto;
+  min-width: 210px;
   position: absolute;
   right: 0;
   background-color: #fff;
@@ -21,12 +21,77 @@
    }
    img {
      vertical-align: sub;
-     margin-right: 7px;
-     top: 1px;
+     margin-right: 13px;
+     top: 2px;
      position: relative;
+     border-radius: $default-border-radius;
    }
  }
   &:hover {
     cursor: pointer;
+  }
+}
+
+.shopping-topcart-items {
+  display: none;
+  min-width: 270px;
+  width: auto;
+  position: absolute;
+  right: -1px;
+  border-radius: 4px;
+  border: 1px solid #b6c2c9;
+  top: 39px;
+  text-align: center;
+  background-color: #fff;
+  z-index: 100;
+  padding-top: 5px;
+  li {
+    float: left;
+    position: relative;
+    width: 100%;
+    img {
+      width: 60px;
+      position: relative;
+      float: left;
+      border-radius: $default-border-radius;
+    }
+    .title-cart {
+      font-weight: 700;
+      text-transform: uppercase;
+      font-size: 12px;
+      top: 15px;
+      left: 70px;
+      position: absolute;
+    }
+    .item-descr {
+      position: absolute;
+      left: 70px;
+      top: 35px;
+      font-size: 12px;
+    }
+    a.remove-item {
+      position: absolute;
+      right: 15px;
+      top: 10px;
+      text-indent: -9999em;
+      &:after {
+        content: '';
+        background-image: url(#{$assets}/images/remove-icon.png);
+        background-repeat: no-repeat;
+        background-position: 3px 3px;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        left: -10px;
+        top: 9px;
+      }
+    }
+  }
+  .button {
+    float: right;
+    margin: 10px;
+    color: #fff;
+    font-size: 12px;
+    line-height: 1.3;
   }
 }
