--- a/public/my-assets/scss/variables.scss
+++ b/public/my-assets/scss/variables.scss
@@ -18,6 +18,8 @@ $open-sans: 'Open Sans', sans-serif;
 // Predefined Break-points
 $default-width: 940px;
 $mobile-width: 320px;
+$max-mobile-width: 767px;
+$tablet-width: 768px;
 
 // Border-radius
 $default-border-radius: 3px;
