--- a/public/my-assets/stylesheets/styles.css
+++ b/public/my-assets/stylesheets/styles.css
@@ -541,7 +541,7 @@ form input {
 
 /* line 2, ../scss/layout/top-cart.scss */
 .header-top-cart {
-  width: auto;
+  min-width: 210px;
   position: absolute;
   right: 0;
   background-color: #fff;
@@ -567,13 +567,86 @@ form input {
 /* line 22, ../scss/layout/top-cart.scss */
 .header-top-cart a img {
   vertical-align: sub;
-  margin-right: 7px;
-  top: 1px;
+  margin-right: 13px;
+  top: 2px;
   position: relative;
+  border-radius: 3px;
 }
-/* line 29, ../scss/layout/top-cart.scss */
+/* line 30, ../scss/layout/top-cart.scss */
 .header-top-cart:hover {
   cursor: pointer;
+}
+
+/* line 35, ../scss/layout/top-cart.scss */
+.shopping-topcart-items {
+  display: none;
+  min-width: 270px;
+  width: auto;
+  position: absolute;
+  right: -1px;
+  border-radius: 4px;
+  border: 1px solid #b6c2c9;
+  top: 39px;
+  text-align: center;
+  background-color: #fff;
+  z-index: 100;
+  padding-top: 5px;
+}
+/* line 48, ../scss/layout/top-cart.scss */
+.shopping-topcart-items li {
+  float: left;
+  position: relative;
+  width: 100%;
+}
+/* line 52, ../scss/layout/top-cart.scss */
+.shopping-topcart-items li img {
+  width: 60px;
+  position: relative;
+  float: left;
+  border-radius: 3px;
+}
+/* line 58, ../scss/layout/top-cart.scss */
+.shopping-topcart-items li .title-cart {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 12px;
+  top: 15px;
+  left: 70px;
+  position: absolute;
+}
+/* line 66, ../scss/layout/top-cart.scss */
+.shopping-topcart-items li .item-descr {
+  position: absolute;
+  left: 70px;
+  top: 35px;
+  font-size: 12px;
+}
+/* line 72, ../scss/layout/top-cart.scss */
+.shopping-topcart-items li a.remove-item {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  text-indent: -9999em;
+}
+/* line 77, ../scss/layout/top-cart.scss */
+.shopping-topcart-items li a.remove-item:after {
+  content: '';
+  background-image: url(../../my-assets/images/remove-icon.png);
+  background-repeat: no-repeat;
+  background-position: 3px 3px;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: -10px;
+  top: 9px;
+}
+/* line 90, ../scss/layout/top-cart.scss */
+.shopping-topcart-items .button {
+  float: right;
+  margin: 10px;
+  color: #fff;
+  font-size: 12px;
+  line-height: 1.3;
 }
 
 /* line 1, ../scss/layout/product.scss */
