--- a/public/my-assets/scss/layout/top-cart.scss
+++ b/public/my-assets/scss/layout/top-cart.scss
@@ -32,66 +32,78 @@
   }
 }
 
-.shopping-topcart-items {
-  display: none;
-  min-width: 270px;
+.shopping-topcart-wrapper {
+  min-width: 210px;
   width: auto;
   position: absolute;
   right: -1px;
-  border-radius: 4px;
-  border: 1px solid #b6c2c9;
-  top: 39px;
+  top: 0;
   text-align: center;
-  background-color: #fff;
   z-index: 100;
   padding-top: 5px;
-  li {
-    float: left;
+  min-height: 35px;
+  .shopping-topcart-items {
+    display: none;
+    min-width: 270px;
+    width: auto;
     position: relative;
-    width: 100%;
-    img {
-      width: 60px;
-      position: relative;
+    right: -1px;
+    border-radius: 4px;
+    border: 1px solid #b6c2c9;
+    top: 39px;
+    float: left;
+    text-align: center;
+    background-color: #fff;
+    z-index: 100;
+    padding-top: 5px;
+    li {
       float: left;
-      border-radius: $default-border-radius;
-    }
-    .title-cart {
-      font-weight: 700;
-      text-transform: uppercase;
-      font-size: 12px;
-      top: 15px;
-      left: 70px;
-      position: absolute;
-    }
-    .item-descr {
-      position: absolute;
-      left: 70px;
-      top: 35px;
-      font-size: 12px;
-    }
-    a.remove-item {
-      position: absolute;
-      right: 15px;
-      top: 10px;
-      text-indent: -9999em;
-      &:after {
-        content: '';
-        background-image: url(#{$assets}/images/remove-icon.png);
-        background-repeat: no-repeat;
-        background-position: 3px 3px;
-        width: 20px;
-        height: 20px;
+      position: relative;
+      width: 100%;
+      img {
+        width: 60px;
+        position: relative;
+        float: left;
+        border-radius: $default-border-radius;
+      }
+      .title-cart {
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 12px;
+        top: 15px;
+        left: 70px;
         position: absolute;
-        left: -10px;
-        top: 9px;
+      }
+      .item-descr {
+        position: absolute;
+        left: 70px;
+        top: 35px;
+        font-size: 12px;
+      }
+      a.remove-item {
+        position: absolute;
+        right: 15px;
+        top: 10px;
+        text-indent: -9999em;
+        &:after {
+          content: '';
+          background-image: url(#{$assets}/images/remove-icon.png);
+          background-repeat: no-repeat;
+          background-position: 3px 3px;
+          width: 20px;
+          height: 20px;
+          position: absolute;
+          left: -10px;
+          top: 9px;
+        }
       }
     }
-  }
-  .button {
-    float: right;
-    margin: 10px;
-    color: #fff;
-    font-size: 12px;
-    line-height: 1.3;
+    .button {
+      float: right;
+      margin: 10px;
+      color: #fff;
+      font-size: 12px;
+      line-height: 1.3;
+    }
   }
 }
