--- a/public/my-assets/scss/content.scss
+++ b/public/my-assets/scss/content.scss
@@ -23,6 +23,9 @@
         height: 180px;
         background-size: cover;
         background-position: 50%;
+        @media (max-width: 939px) {
+          width: 100%;
+        }
         .banner-title {
           position: absolute;
           top: 62px;
@@ -49,11 +52,17 @@
         color: #333333;
         font-weight: 700;
         margin-left: 1%;
+        @media (max-width: 939px) {
+          margin: 0;
+          width: 100%;
+          padding: 40px 20px 20px 20px;
+        }
         h1 {
           font-size: 42px;
           line-height: 1.3;
           padding-bottom: 5px;
           margin-top: -15px;
+          font-weight: 700;
         }
         h2 {
           text-transform: uppercase;
@@ -76,6 +85,10 @@
       text-align: left;
       position: relative;
       padding-left: 30px;
+      @media (max-width: $max-mobile-width) {
+        text-align: center;
+        padding-left:0;
+      }
       &:before {
         content: " ";
         position: absolute;
@@ -85,6 +98,9 @@
         left: 0;
         top: 9px;
         z-index: 1;
+        @media (max-width: $max-mobile-width) {
+          display: none;
+        }
       }
       span.title {
         font: 24px/0.7 $open-sans;
@@ -96,6 +112,9 @@
         text-transform: uppercase;
         padding: 0 10px;
       }
+
+
+
     }
   }
 }
