--- a/public/my-assets/scss/form.scss
+++ b/public/my-assets/scss/form.scss
@@ -20,6 +20,14 @@ form {
     height: 30px;
     top: 20px;
     left: 240px;
+    @media (max-width: 939px) {
+      position: relative;
+      height: 30px;
+      top: 32px;
+      left:0;
+      float: left;
+      clear: both;
+    }
   }
 
   &:after {
